# grok-imagine-archive

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.example.yml  pyproject.toml
.antigravitycli/: 73623177-9ed5-43e0-a3cc-f371d341e01b.json
config/: accounts.example.toml
docs/: architecture.md  examples.md  operations.md  product-design.md
docs/zh-CN/: README.md  architecture.md  examples.md  operations.md  product-design.md
scripts/: create_mock_archive.py  mock_web_app.py
src/grok_downloader/: cli.py  client.py  config.py  download.py  extract.py  headers.py  verify.py  web.py
src/grok_imagine_archive/: archive.py  cli.py  client.py  config.py  lock.py  sync.py  web.py
tests/: test_archive.py  test_cli.py  test_client.py  test_config.py  test_extract.py  test_har_contract.py  test_web.py
