[project]
name = "grok-downloader"
version = "0.1.0"
description = "Local backup tool for Grok Imagine saved assets."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "curl-cffi>=0.15.0",
    "fastapi>=0.119.0",
    "uvicorn>=0.38.0",
]

[project.scripts]
grok-downloader = "grok_downloader.cli:main"

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=9.0.0",
    "ruff>=0.15.0",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"
